--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -4,10 +4,27 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <link rel="icon" type="image/png" href="/images/icone-home.png">
+  
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
+  
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
+  <style>
+    html, body {
+      height: 100%;
+    }
+    body {
+      display: flex;
+      flex-direction: column;
+    }
+    main {
+      flex: 1;
+    }
+    footer {
+      font-size: 0.875rem; 
+    }
+  </style>
 
   <title>Home</title>
-
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
 </head>
 
 <body>
@@ -29,5 +46,32 @@
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.4/dist/js/bootstrap.bundle.min.js" integrity="sha384-YUe2LzesAfftltw+PEaao2tjU/QATaW/rOitAq67e0CT0Zi2VVRL0oC4+gAaeBKu" crossorigin="anonymous"></script>
 
+<footer class="bg-dark text-white text-center py-2 mt-auto">
+  <div class="container">
+    <p class="mb-2">monitoraai</p>
+
+    <div class="d-flex justify-content-center gap-3 mb-2 flex-wrap">
+      <a href="https://www.instagram.com/joaoo_ce" class="text-white" target="_blank"><i class="bi bi-instagram fs-5"></i></a>
+      <a href="https://www.linkedin.com/in/alvescamila87/" class="text-white" target="_blank"><i class="bi bi-linkedin fs-5"></i></a>
+      <a href="tel:+554733337545" class="text-white"><i class="bi bi-telephone fs-5"></i></a>
+      <a href="mailto:alvescamila87@gmail.com" class="text-white"><i class="bi bi-envelope fs-5"></i></a>
+    </div>
+
+    <div class="text-white small">
+      <p class="mb-1">Developed by:</p>
+      <div class="d-flex justify-content-center gap-3 flex-wrap">
+        <span>
+          Camila Alves
+          <a href="https://github.com/alvescamila87" class="text-white ms-1" target="_blank"><i class="bi bi-github"></i></a>
+        </span>
+        <span>
+          João Emídio
+          <a href="https://github.com/emidiojoao" class="text-white ms-1" target="_blank"><i class="bi bi-github"></i></a>
+        </span>
+      </div>
+    </div>
+  </div>
+</footer>
 </body>
+
 </html>
